# pystore

./: .pre-commit-config.yaml  .travis.yml  meta.yaml  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: python-publish.yml
pystore/: __init__.py  collection.py  config.py  item.py  store.py  utils.py
