[project]
keywords = ["dask", "datastore", "flatfile", "pystore"]
name = "PyStore"
dynamic = ["version"]
description = "Fast data store for Pandas timeseries data"
authors = [{ name = "Ran Aroussi", email = "ran@aroussi.com" }]
license = { file = "LICENSE.txt" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  # 'Development Status :: 4 - Beta',
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "python-snappy>=0.5.4",
  "multitasking>=0.0.9",
  "distributed>=1.28.1",
  "pandas >= 1.3",
  "numpy>=1.17.3",
  "pyarrow>=15.0.2",
  "dask[dataframe]>=2024.1.0",
]

[project.urls]
"Homepage" = "https://github.com/ranaroussi/pystore"
"Bug Tracker" = "https://github.com/ranaroussi/pystore/issues"


[project.optional-dependencies] # Optional
dev = [
  "black>=24.4.2",
  "pylint>=3.1.1",
  "isort>=5.13.2",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
  "pandas-stubs>=2.2.1.240316",
  "bandit[toml]>=1.7.8",
  "flake8>=7.0.0",
  "flake8-pytest-style>=2.0.0",
  "pytest>=8.2.1",
  "pytest-env>=1.1.3",
  "pytest-cov>=4.1.0",
  "pylint-pytest>=1.1.7",
  "tox>=4.0.0",
]
#test = ["coverage"]

[tool.isort]
profile = "black"

[tool.pylint.format]
# black compatibility
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
max-line-length = "88"

[tool.bandit]
#exclude_dirs = ["tests"]
skips = ["B110"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
log_cli = true
#log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
minversion = "6.0"
filterwarnings = "ignore"
norecursedirs = ["docs", "build"]

# Specify a custom directory for pytest cache
cache_dir = "tests/.pytest_cache"
